# DNS-Master

./: Cargo.toml  README.md
examples/: dns.csv  dns.json  mirrors.csv
src/: app.rs  dns_utils.rs  file_loader.rs  main.rs  mirror_utils.rs  sys_dns.rs  ui.rs
